wallpapers/potd: show prompt when images from external wallpaper providers might have NSFW content

BUG: 399126
FIXED-IN: 5.26